# Ml-overview

./: .gitbook.yaml  .gitignore  AI_ML_REVISION_GUIDE.md  AI_REPO_AUDIT.md  FLOWCHARTS.md  LICENSE  MIND-MAP.md  MODERN_AI_ENGINEER_ROADMAP.md  README.md  REPO_AUDIT_EXTENSIVE.md  SUMMARY.md  introduction-to-ai.md  machine_learning_overview.ipynb  ml-glossary.md  mlops.md  practical-ml-scenarios.md
.obsidian/: community-plugins.json  workspace.json
00-meta/: 00-what-is-ai.md  01-ai-ml-systems-and-application.md  README.md  REMOVED-CONTENT.md  REPO-STRUCTURE.md  check-links.py
01-foundations/: 01-ai-ml-systems-and-application.md  02-math-and-theory-foundations.md  03-python-and-data-tooling.md  04-data-processing-and-eda.md  05-information-theory.md  06-ml-glossary.md  AI_ML_REVISION_GUIDE.md  README.md  REVISION.md  flashcards.md  interviewquestions.md  introduction-to-ai.md  linear-algebra-and-numerical-methods.md  ml-glossary.md
01-math-foundations/: 02-maths.md  (+10 more)
13-interview-prep/production-ai-playbook/01-tabular-ml-template/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
13-interview-prep/production-ai-playbook/01-tabular-ml-template/configs/: default.yaml
13-interview-prep/production-ai-playbook/01-tabular-ml-template/src/api/: main.py  schemas.py
13-interview-prep/production-ai-playbook/01-tabular-ml-template/src/core/: config.py  exceptions.py  logger.py
13-interview-prep/production-ai-playbook/01-tabular-ml-template/src/models/: predict.py  train.py
13-interview-prep/production-ai-playbook/01-tabular-ml-template/tests/: test_api.py
(+1073 files in other folders)
