[project]
name = "tabular-ml-service"
version = "0.1.0"
description = "Production-ready Tabular ML Template"
authors = [{name = "AI Engineer"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0",
    "structlog>=23.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "black",
    "flake8",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
